--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,13 @@ select option{background-color:#fff;color:#000;}
 .tw:hover{background-color:#1da1f2;}
 .pin:hover{background-color:#bd081b;}
 .yt:hover{background-color:#ff0000;}
+.about-text {top: 35%;text-align: center;}
+.about-text h1 {font-size: 200%;font-weight: bold;font-style: italic;text-shadow: 1px 1px 5px #D31;}
+.about-text i {font-size: 120%;font-weight: 600;text-shadow: 1px 1px 3px #ccc;}
+#info-slider .carousel-item img{width:100%;height:auto;}
+.slogan ul{list-style:none;}
+.carousel-caption{bottom:30%; background:rgba(0, 0, 0, 0.5); border-radius:10px;}
+.slogan { font-size: 200%; }
 
 @media (max-width:1192px){
 	.nav-link.text-white.pl-3.pr-3{padding-left: 0.5rem !important;padding-right: 0.5rem !important;}	
@@ -115,13 +122,19 @@ select option{background-color:#fff;color:#000;}
 	 .top-banner .menu-header {padding-top: 2px !important;padding-bottom: 0 !important;}
 	 .top-banner .img-fluid.background-image {display: none;}
 	 .collapse.show {padding-bottom: 20px;}
-	 button.navbar-toggler{background-color:#313131;}
+	 .slogan { font-size: 140%; }
+	 .carousel-caption {bottom: 20%;}
+	/* button.navbar-toggler{background-color:#313131;} */
 }
 
 @media (max-width:614px){
 	#services .tableDisplay {margin-bottom: 20px;}
 	#footer .border-left.border-default {padding-left: 1rem !important;padding-right: 1rem !important;border-left: none !important;}
 	.copyright-footer .text-left {margin-bottom: 15px;}
+	.carousel-caption {bottom: 0%;line-height: 18px;width: 100%;left: 0;right: 0;top: 0;}
+	.slogan { font-size: 90%; }
+	.slogan .clearfix{display:none;}
+	.slogan ul{padding:0px; margin:0px;}
 }
 
 @media (max-width:575px){ 
